# toastmaster-motivator

./: .gitignore  README.md
backend/: .env  Cargo.toml  docker-compose.yml
backend/migrations/: 20231202020138_schema.down.sql  20231202020138_schema.up.sql
backend/src/: lib.rs
backend/src/adapters/: mod.rs
backend/src/domains/member/: commands.rs  mod.rs
backend/src/services/: mod.rs
frontend/: .eslintrc.json  README.md  package-lock.json  package.json
frontend-candidate/: .firebaserc  firebase.js  firebase.json  package.json
frontend-candidate/.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
frontend-candidate/src/: routes.tsx
frontend-candidate/src/assets/css/: MiniCalendar.css
frontend-candidate/src/components/calendar/: MiniCalendar.tsx
frontend-candidate/src/components/card/: MiniStatistics.tsx
frontend-candidate/src/components/sidebar/components/: Brand.tsx  SidebarCard.tsx
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/assets/: App.css
frontend/src/components/app/: AppBar.tsx  SignIn.tsx  SignInDialog.tsx
frontend/src/dev/: previews.tsx
frontend/src/pages/: App.tsx
horizon-ui-chakra-ts/: .prettierrc  package.json
horizon-ui-chakra-ts/public/: index.html
horizon-ui-chakra-ts/src/: routes.tsx
horizon-ui-chakra-ts/src/assets/css/: MiniCalendar.css
horizon-ui-chakra-ts/src/components/calendar/: MiniCalendar.tsx
horizon-ui-chakra-ts/src/components/icons/: Icons.tsx
horizon-ui-chakra-ts/src/variables/: charts.ts
(+20 files in other folders)
