[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = {version="0.7.2", features=["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version="*" , features = ["serde", "v4"] }
chrono = {version="0.4", features=["serde"]}
async-trait= "*"

[[bin]]
name = "web"
path = "./src/bin/web/main.rs"


[lints.rust]
unsafe_code="forbid"